# repo-search

./: .env.example  .gitignore  README.md  debug_search.py  pyproject.toml  setup.py  simple_test.py
src/mcp/: server.py  test_mcp_server.py
src/repo_search/: __init__.py  cli.py  config.py  models.py  utils.py
src/repo_search/api/: __init__.py  client.py
src/repo_search/database/: __init__.py  base.py  chroma.py
src/repo_search/embedding/: __init__.py  openai.py
src/repo_search/github/: __init__.py  repository.py
src/repo_search/processing/: __init__.py  chunker.py
src/repo_search/search/: __init__.py  engine.py
